<resources>
    <string name="app_name">Praktisi RPL</string>
    <string name="kembali">Kembali</string>
    <string name="nim">NIM</string>
    <string name="asal">Asal</string>
    <string name="tglLahir">Tanggal Lahir</string>
    <string name="prodi">Prodi</string>
    <string name="fakultas">Fakultas</string>
    <string name="bagasNama">Bagas Rizki Aji Wijaya</string>
    <string name="bagasNim">V3421020</string>
    <string name="bagasAsal">Kab Wonogiri</string>
    <string name="bagasTglLahir">24 Agustus 2002</string>
    <string name="allProdi">D3 Teknik Informatika</string>
    <string name="allFakultas">Sekolah Vokasi</string>
    <string name="is">:</string>
    <string name="danangNama">Danang Hadi Sutrisno</string>
    <string name="danangNim">V3421030</string>
    <string name="danangTglLahir">06 Juli 2000</string>
    <string name="danangAsal">Kab Wonogiri</string>
    <string name="adwinNama">Adwin Fajar Putro</string>
    <string name="adwinNim">V3421004</string>
    <string name="adwinAsal">Surakarta</string>
    <string name="adwinTglLahir">13 Mei 2001</string>
    <string name="AfifNama">Afif Nugroho</string>
    <string name="AfifNim">V3421005</string>
    <string name="AfifAsal">Kab Bantul</string>
    <string name="AfifTglLahir">13 Oktober 2002</string>
    <string name="burhanNama">Burhan Aji Wardana</string>
    <string name="burhanNim">V3421025</string>
    <string name="burhanAsal">Kab Sragen</string>
    <string name="burhanTglLahir">25 Februari 2003</string>
    <string name="chesaNama">Chesa Sadewa Eka Langga</string>
    <string name="chesaNim">V3421027</string>
    <string name="chesaAsal">Pontianak</string>
    <string name="chesaTglLahir">13 September 2000</string>
</resources>